# the-office-script-analysis

./: .gitignore  Pipfile  analysis.ipynb  get_transcripts.py  pyproject.toml  results.json
transcripts/: 01x01.txt  01x02.txt  01x03.txt  01x04.txt  01x05.txt  01x06.txt  02x01.txt  02x02.txt  02x03.txt  02x04.txt  02x05.txt  02x06.txt  02x07.txt  02x08.txt  02x09.txt  02x10.txt  02x11.txt  02x12.txt  02x13.txt  02x14.txt  02x15.txt  02x16.txt  02x17.txt  02x18.txt  02x19.txt  02x20.txt  02x21.txt  02x22.txt  03x00.txt  03x01.txt  03x02.txt  03x03.txt  03x04.txt  03x05.txt  03x06.txt  03x07.txt  03x08.txt  03x09.txt  03x10-11.txt  03x12.txt  (+207 more)
