[tool.poetry]
name = "the-office-script-analysis"
version = "0.1.0"
description = "Analyzing the speech patterns of characters from The Office"
authors = ["Jediah Katz <jediahkatz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
beautifulsoup4 = "^4.11.1"
nltk = "^3.7"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
